@@ -2,11 +2,11 @@
  * 
  * DO NOT EDIT THIS FILE   (fixincl.x)
  * 
- * It has been AutoGen-ed  Wednesday June  2, 2010 at 06:51:26 PM MEST
+ * It has been AutoGen-ed  Wednesday July 14, 2010 at 11:12:51 AM MEST
  * From the definitions    inclhack.def
  * and the template file   fixincl
  */
-/* DO NOT SVN-MERGE THIS FILE, EITHER Wed Jun  2 18:51:27 MEST 2010
+/* DO NOT SVN-MERGE THIS FILE, EITHER Wed Jul 14 11:12:52 MEST 2010
  *
  * You must regenerate it.  Use the ./genfixes script.
  *
@@ -15,7 +15,7 @@
  * certain ANSI-incompatible system header files which are fixed to work
  * correctly with ANSI C and placed in a directory that GNU C will search.
  *
- * This file contains 182 fixup descriptions.
+ * This file contains 183 fixup descriptions.
  *
  * See README for more information.
  *
@@ -5379,6 +5379,44 @@ static const char* apzSolaris_ComplexPatch[] = { sed_cmd_z,
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
  *
+ *  Description of Solaris_Cond_Init fix
+ */
+tSCC zSolaris_Cond_InitName[] =
+     "solaris_cond_init";
+
+/*
+ *  File name selection pattern
+ */
+tSCC zSolaris_Cond_InitList[] =
+  "pthread.h\0";
+/*
+ *  Machine/OS name selection pattern
+ */
+tSCC* apzSolaris_Cond_InitMachs[] = {
+        "*-*-solaris2.8",
+        (const char*)NULL };
+
+/*
+ *  content selection pattern - do fix if pattern found
+ */
+tSCC zSolaris_Cond_InitSelect0[] =
+       "@\\(#\\)pthread.h[ \t]+1.[0-9]+[ \t]+[0-9/]+ SMI";
+
+#define    SOLARIS_COND_INIT_TEST_CT  1
+static tTestDesc aSolaris_Cond_InitTests[] = {
+  { TT_EGREP,    zSolaris_Cond_InitSelect0, (regex_t*)NULL }, };
+
+/*
+ *  Fix Command Arguments for Solaris_Cond_Init
+ */
+static const char* apzSolaris_Cond_InitPatch[] = {
+    "format",
+    "%1, 0x4356%2",
+    "^(#define[ \t]+PTHREAD_COND_INITIALIZER[ \t]+\\{.*0)(\\},[ \t]*0\\}.*)$",
+    (char*)NULL };
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * *
+ *
  *  Description of Solaris_Math_1 fix
  */
 tSCC zSolaris_Math_1Name[] =
@@ -7386,9 +7424,9 @@ static const char* apzX11_SprintfPatch[] = {
  *
  *  List of all fixes
  */
-#define REGEX_COUNT          228
+#define REGEX_COUNT          229
 #define MACH_LIST_SIZE_LIMIT 181
-#define FIX_COUNT            182
+#define FIX_COUNT            183
 
 /*
  *  Enumerate the fixes
@@ -7527,6 +7565,7 @@ typedef enum {
     RS6000_PARAM_FIXIDX,
     SCO_MATH_FIXIDX,
     SOLARIS_COMPLEX_FIXIDX,
+    SOLARIS_COND_INIT_FIXIDX,
     SOLARIS_MATH_1_FIXIDX,
     SOLARIS_MATH_2_FIXIDX,
     SOLARIS_MATH_3_FIXIDX,
@@ -8243,6 +8282,11 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      apzSolaris_ComplexMachs,
      SOLARIS_COMPLEX_TEST_CT, FD_MACH_ONLY,
      aSolaris_ComplexTests,   apzSolaris_ComplexPatch, 0 },
+
+  {  zSolaris_Cond_InitName,    zSolaris_Cond_InitList,
+     apzSolaris_Cond_InitMachs,
+     SOLARIS_COND_INIT_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
+     aSolaris_Cond_InitTests,   apzSolaris_Cond_InitPatch, 0 },
 
   {  zSolaris_Math_1Name,    zSolaris_Math_1List,
      apzSolaris_Math_1Machs,
